@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdnssd/Attic/kdnssd-3.4.0_rc1.ebuild,v 1.1 2005/02/27 20:21:35 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdnssd/Attic/kdnssd-3.4.0_rc1.ebuild,v 1.2 2005/03/07 11:12:30 cryos Exp $
 
 KMNAME=kdenetwork
 MAXKDEVER=$PV
@@ -8,5 +8,5 @@ KM_DEPRANGE="$PV $MAXKDEVER"
 inherit kde-meta eutils
 
 DESCRIPTION="A DNSSD (DNS Service Discovery - part of Rendezvous) ioslave and kded module"
-KEYWORDS="~x86"
+KEYWORDS="~x86 ~amd64"
 IUSE=""
