@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdenetwork-meta
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdenetwork-meta/ChangeLog,v 1.3 2005/02/27 20:21:34 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdenetwork-meta/ChangeLog,v 1.4 2005/03/07 11:13:48 cryos Exp $
+
+  07 Mar 2005; Marcus D. Hanwell <cryos@gentoo.org>
+  kdenetwork-meta-3.4.0_rc1.ebuild:
+  Marked ~amd64, keywording KDE split ebuilds, bug 80944.
 
 *kdenetwork-meta-3.4.0_rc1 (27 Feb 2005)
 
